--- a/pom.xml
+++ b/pom.xml
@@ -12,9 +12,6 @@
 	<artifactId>extratolacamento</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
-	<name>extratolacamento</name>
-	<description>Demo project for Spring Boot</description>
-	<url>http://maven.apache.org</url>
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
@@ -26,6 +23,14 @@
 			<artifactId>json-simple</artifactId>
 			<version>1.1.1</version>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.6</version>
+		</dependency>
+
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -53,12 +58,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>org.hibernate.javax.persistence</groupId>
-			<artifactId>hibernate-jpa-2.1-api</artifactId>
-			<type>jar</type>
-		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-autoconfigure</artifactId>
+            <version>2.2.8.RELEASE</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
