--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,13 @@
 			<version>2.10.4</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.javamoney/moneta -->
+		<dependency>
+			<groupId>org.javamoney</groupId>
+			<artifactId>moneta</artifactId>
+			<version>1.4</version>
+			<type>pom</type>
+		</dependency>
 
 
 		<dependency>
