--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,13 @@
 			<type>pom</type>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-security -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+			<version>2.3.1.RELEASE</version>
+		</dependency>
+
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -78,7 +85,12 @@
             <artifactId>spring-boot-autoconfigure</artifactId>
             <version>2.2.8.RELEASE</version>
         </dependency>
-    </dependencies>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-config</artifactId>
+			<version>5.2.5.RELEASE</version>
+		</dependency>
+	</dependencies>
 
 	<build>
 		<plugins>
